# eventide_python

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: examples.md  message_db_contract.md  migration_notes.md  parity_matrix.md
src/eventide_python/: stream_name.py
src/eventide_python/consumer/: __init__.py  consumer.py  position_store.py
src/eventide_python/entity_snapshot/: __init__.py  store.py
src/eventide_python/entity_store/: __init__.py  cache.py  projection.py  record.py  store.py
src/eventide_python/message_db/: __init__.py  client.py  errors.py  logging.py  message_data.py  postgres.py  serialization.py  sql.py  types.py
src/eventide_python/service_host/: __init__.py  host.py  service.py
tests/: test_consumer.py  test_entity_store.py  test_message_data.py  test_projection.py  test_service_host.py  test_smoke.py  test_snapshot_store.py  test_stream_name.py
tests/integration/: README.md  docker-compose.yml  test_message_db_integration.py
