[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "eventide-python"
version = "0.1.0"
description = "Python client for the Eventide Message DB"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "siege_analytics" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.6",
]
postgres = ["psycopg[binary]>=3.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires Message DB",
]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
